[package]
name = "AdbPuller"
version = "1.0.0"
edition = "2021"
authors = ["github.com/Alessandro201"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.3.21", features = ["derive"] }
colored = "2.0.4"
glob = "0.3.1"
indicatif = "0.17.7"
normpath = "1.1.1"
path-clean = "1.0.1"
shellexpand = "3.1.0"
sys = "0.0.1"
unix_path = "1.0.1"
unix_str = "1.0.0"
which = "6.0.0"
