[package]
name = "adbpuller"
version = "1.0.0"
edition = "2021"
authors = ["github.com/Alessandro201"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.86"
clap = { version = "4.3.21", features = ["derive"] }
colored = "2.0.4"
glob = "0.3.1"
indicatif = { version = "0.17.7", features = ["improved_unicode"] }
normpath = "1.1.1"
path-clean = "1.0.1"
regex = "1.11.1"
shellexpand = "3.1.0"
sys = "0.0.1"
unix_path = "1.0.1"
unix_str = "1.0.0"
which = "6.0.0"

[profile.release]
opt-level = 'z'   # Optimize for size
lto = true        # Enable link-time optimization
codegen-units = 1 # Reduce number of codegen units to increase optimizations
# strip = true      # Strip symbols from binary*
